fix missalignement of icon in inputs

--- a/ui/components/app/snaps/snap-ui-renderer/index.scss
+++ b/ui/components/app/snaps/snap-ui-renderer/index.scss
@@ -34,6 +34,10 @@
     border-radius: 8px;
     border-color: var(--color-border-muted);
 
+    & .mm-icon {
+      top: 0;
+    }
+
     .mm-text--overflow-wrap-anywhere {
       overflow-wrap: normal;
     }
